# nonebot-plugin-bam

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_bam/: __init__.py  activity.py  common.py  config.py  follow.py  group.py  user.py
nonebot_plugin_bam/bilibili/: activity.py  api.py  live1.py  live2.py  user.py  wbi.py
nonebot_plugin_bam/database/: __init__.py  db.py  helper.py
nonebot_plugin_bam/database/tables/: __init__.py  bilibili_user.py  bilibili_user_status.py  follow_link.py  group.py
nonebot_plugin_bam/tasks/: activity_monitor.py  live_monitor.py
tests/: __init__.py  test_h5_activity.py  test_wbi.py
tests/act_data/: h5.json
