[tool.poetry]
name = "nonebot_plugin_bam"
version = "0.1.5"
description = "Bilibili activity monitor plugin for nonebot"
authors = ["7sDream <i@7sdre.am>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/7sDream/nonebot-plugin-bam"
repository = "https://github.com/7sDream/nonebot-plugin-bam"
keywords = ["nonebot", "bilibili", "qqbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.14.4"
nonebot2 = "2.0.0.a10"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
nonebot-plugin-apscheduler = "^0.1.2"
pydantic = "1.7.3"


[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"
rope = "^0.18.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
