[tool.poetry]
name = "nonebot_plugin_bam"
version = "0.2.0a1"
description = "Bilibili activity monitor plugin for nonebot"
authors = ["7sDream <i@7sdre.am>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/7sDream/nonebot-plugin-bam"
repository = "https://github.com/7sDream/nonebot-plugin-bam"
keywords = ["nonebot", "bilibili", "qqbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.16.2"
nonebot2 = "^2.0.0"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
nonebot-plugin-apscheduler = "^0.3.0"
pydantic = "^1.10.9"
nonebot-adapter-onebot = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
rope = "^1.8.0"
pytest = "^7.3.2"
nonebot-adapter-console = "^0.3.2"
pytest-asyncio = "^0.21.0"
nonebot2 = {version = "^2.0.0", extras = ["fastapi"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
